<resources>
    <string name="app_name">BrainBurner</string>
    <string name="linear_layout_of_que_1">linear layout of Que 1</string>
    <string name="what_method_you_should_override_to_use_android_menu_system">What method you should override to use Android menu system</string>
    <string name="oncreateoptionsmenu">onCreateOptionsMenu()</string>
    <string name="oncreatemenu">onCreateMenu()</string>
    <string name="onmenucreated">onMenuCreated()</string>
    <string name="oncreatecontextmenu">onCreateContextMenu()</string>
    <string name="linear_layout_of_que_2">linear layout of Que 2</string>
    <string name="android_is_licensed_under_which_open_source_licensing_license">Android is licensed under which open source licensing license</string>
    <string name="enter_here">Enter here</string>
    <string name="linear_layout_of_que_3">linear layout of Que 3</string>
    <string name="types_of_layouts_present_in_android">Types of Layouts present in android.</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="web_layout">Web Layout</string>
    <string name="simple_layout">Simple Layout</string>
    <string name="linear_layout_of_que4">linear layout of Que4</string>
    <string name="guess_he_is_one_of_the_android_developer">Guess : He is one of the android developer</string>
    <string name="type_here">Type here</string>
    <string name="linear_layout_of_que_5">linear layout of Que 5</string>
    <string name="which_of_the_following_asynctask_methods_is_not_executed_on_the_ui_thread">Which of the following AsyncTask methods is NOT executed on the UI thread?</string>
    <string name="onpreexecute">onPreExecute()</string>
    <string name="onpostexecute">onPostExecute()</string>
    <string name="publishprogress">publishProgress()</string>
    <string name="onprogressupdate">onProgressUpdate()</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="andy_rubin">andy rubin</string>
</resources>
